gcc-10 (10-20200204-2) UNRELEASED; urgency=medium

  * Let the libgcc-sN multilib cross packages provide libgccN.

 -- Matthias Klose <doko@debian.org>  Tue, 04 Feb 2020 16:15:43 +0100

gcc-10 (10-20200204-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200202, 0303907ea5d).
  * On architectures where libgcc_s.so is a symlink, replace the symlink with
    a simple linker script.
  * Add breaks on libgcc-N-dev packages on arm64, s390x and sparc64.
    Closes: #950550, #950579.

 -- Matthias Klose <doko@debian.org>  Tue, 04 Feb 2020 15:52:16 +0100

gcc-10 (10-20200202-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200202, 0303907ea5d).

 -- Matthias Klose <doko@debian.org>  Sun, 02 Feb 2020 11:43:57 +0100

gcc-10 (10-20200129-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20200129, 87c3fcfa6bb).
  * Update gm2 from the gm2 trunk.
  * Fix libgomp-plugin-amdgcn1 package description.
  * Bump libgo soversion.
  * Reset libgphobos version to 1.
  * Apply proposed patch for PR bootstrap/93409.
  * Fix building the amdgcn offload compiler with llvm 9.
  * Bump standards version.

 -- Matthias Klose <doko@debian.org>  Wed, 29 Jan 2020 12:34:27 +0100

gcc-10 (10-20200117-2) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20200117, 507de5ee23e).
  * Update gm2 from the gm2 trunk.

  [ Matthias Klose ]
  * Update libgomp symbols files.
  * Build-depend on libzstd-dev.
  * Revert the fix for PR c/85678, not making -fno-common the default for
    current releases and backports.
  * Update libstdc++ symbols file.
  * Install more AArch64 intrinsic headers.
  * Prepare for git updates from a release branch.
  * Allow retrying of a native build in case of unreproducible ICEs.

  [YunQiang Su]
  * Fix buffer overflow in the gcc-search-prefixed-as-ld patch when
    strlen(DEFAULT_REAL_TARGET_MACHINE) < multiarch_len. Addresses: #915194.
