@@ -47,6 +47,8 @@ Depends: gcc-10-base (= ${gcc:Version}), ${shlibs:Depends}, ${misc:Depends}
 Provides: libgcc1 (= ${gcc:EpochVersion}), libgcc-s1-armel [armel], libgcc-s1-armhf [armhf]
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
+Breaks: ${libgcc:Breaks}
+Replaces: libgcc1 (<< 1:10)
 Description: GCC support library
  Shared version of the support library, a library of internal subroutines
  that GCC uses to overcome shortcomings of particular machines, or
