@@ -1,8 +1,10 @@
 gcc-10 (10-20200204-2) UNRELEASED; urgency=medium
 
   * Let the libgcc-sN multilib cross packages provide libgccN.
+  * libgcc-sN: Move library back to /lib from /usr/lib, and add
+    a replaces to libgccN. Closes: #950624.
 
- -- Matthias Klose <doko@debian.org>  Tue, 04 Feb 2020 16:15:43 +0100
+ -- Matthias Klose <doko@debian.org>  Mon, 10 Feb 2020 09:13:36 +0100
 
 gcc-10 (10-20200204-1) unstable; urgency=medium
 
